--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <main role="main">
 	<section class="sub-nav" id="sub-nav" style="height: 74px;">
 	<nav class="loaded" style="">
-	<a href="https://jschintz.github.io/AccionMeasures/#at-a-glance" class="is-inview">At a Glance</a>
-	<a href="https://jschintz.github.io/AccionMeasures/#who-we-serve" class="">Who we serve</a>
-	<a href="https://jschintz.github.io/AccionMeasures/#our-members" class="">Our members</a>
-	<a href="https://jschintz.github.io/AccionMeasures/#portfolio-risk" class="">Portfolio Risk</a>
-	<a href="https://jschintz.github.io/AccionMeasures/#most-recent-quarter" class="">Most recent quarter</a>
-	<a href="https://jschintz.github.io/AccionMeasures/#about-the-data" class="">About the Data</a>
+	<a href="https://jschintz.github.io/AccionMeasures#at-a-glance" class="is-inview">At a Glance</a>
+	<a href="https://jschintz.github.io/AccionMeasures#who-we-serve" class="">Who we serve</a>
+	<a href="https://jschintz.github.io/AccionMeasures#our-members" class="">Our members</a>
+	<a href="https://jschintz.github.io/AccionMeasures#portfolio-risk" class="">Portfolio Risk</a>
+	<a href="https://jschintz.github.io/AccionMeasures#most-recent-quarter" class="">Most recent quarter</a>
+	<a href="https://jschintz.github.io/AccionMeasures#about-the-data" class="">About the Data</a>
 	</nav>	
 
 	<section class="success" id="at-a-glance">
