--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+
+<header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
+            <div class="contain _very-narrow">
+                        <h1>Measuring Accion</h1>
+                            <h2><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
+</h2>
+                    </div>
+    </header>
+<style>
+#header + main {
+	margin-top: 0;
+}
+#top_nav {
+	display: none;
+}
+#feedbackify {
+	display: none;
+}
+#main_nav {
+	display: none;
+}
+#footer {
+	display: none;
+}
+</style>	
 <body>
 <main role="main">
 	<section class="sub-nav" id="sub-nav" style="height: 74px;">
