--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script src="./AccionMeasures/2270606076503987" async=""></script>
+
+<script async="" src="./AccionMeasures/fbevents.js.download"></script>
+<script async="" src="./AccionMeasures/32187"></script>
+<script type="text/javascript" async="" src="./AccionMeasures/analytics.js.download"></script>
+<script src="./AccionMeasures/fb.js.download" type="text/javascript" id="hs-ads-pixel-4088976" data-ads-portal-id="4088976" data-ads-env="prod" data-loader="hs-scriptloader" data-hsjs-portal="4088976" data-hsjs-env="prod"></script>
+<script src="./AccionMeasures/4088976.js.download" type="text/javascript" id="hs-analytics"></script>
+<script type="text/javascript" async="" defer="" src="./AccionMeasures/piwik.js.download"></script>
+<script type="text/javascript" async="" src="./AccionMeasures/heap-1850717506.js.download"></script>
+<script type="text/javascript" async="" src="./AccionMeasures/f.js.download"></script><script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/us.accion.org\/","name":"Accion","potentialAction":{"@type":"SearchAction","target":"https:\/\/us.accion.org\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"Organization","url":"https:\/\/us.accion.org\/impact-study\/","sameAs":[],"@id":"#organization","name":"Accion","logo":"http:\/\/upgrade.usaccion.org\/wp-content\/uploads\/2017\/10\/ACCION_PRI_RGB_D.jpg"}</script>
 	
 
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
