--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
 <a href="https://us.accion.org/">
 <img src="./AccionMeasures/logo.svg" alt="Accion Logo">
 </a>	
+
+<style type="text/css">
+img.wp-smiley,
+img.emoji {
+	display: inline !important;
+	border: none !important;
+	box-shadow: none !important;
+	height: 1em !important;
+	width: 1em !important;
+	margin: 0 .07em !important;
+	vertical-align: -0.1em !important;
+	background: none !important;
+	padding: 0 !important;
+}
+</style>
+<link rel="stylesheet" id="wpml-legacy-horizontal-list-0-css" href="./AccionMeasures/style.css" type="text/css" media="all">
+<link rel="stylesheet" id="main_css-css" href="./AccionMeasures/main.min.css" type="text/css" media="all">
+<link rel="stylesheet" id="theme_css-css" href="./AccionMeasures/style(1).css" type="text/css" media="all">
+<link rel="stylesheet" id="font_css-css" href="./AccionMeasures/9e947310-fa88-4ae7-bcb2-62a2b937e380.css" type="text/css" media="all">
+<link rel="stylesheet" id="fontawesome-css" href="./AccionMeasures/font-awesome.min.css" type="text/css" media="all">
+      <script>
+      if (document.location.protocol != "https:") {
+          document.location = document.URL.replace(/^http:/i, "https:");
+      }
+      </script>
+      <script type="text/javascript" src="./AccionMeasures/jquery.js.download"></script>
+<script type="text/javascript" src="./AccionMeasures/jquery-migrate.min.js.download"></script>	
 	
 <script async="" src="./AccionMeasures/fbevents.js.download"></script>
 <script async="" src="./AccionMeasures/32187"></script>
