--- a/index.html
+++ b/index.html
@@ -56,42 +56,24 @@ body {
 }
 </style>
 </head>	
-	
-<header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
-            <div class="contain _very-narrow">
-                        <h1>Measuring Accion</h1>
-                            <h2><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
-</h2>
-                    </div>
-    </header>
-<style>
-#header + main {
-	margin-top: 0;
-}
-#top_nav {
-	display: none;
-}
-#feedbackify {
-	display: none;
-}
-#main_nav {
-	display: none;
-}
-#footer {
-	display: none;
-}
-</style>	
 <body>
-<main role="main">
-	<section class="sub-nav" id="sub-nav" style="height: 74px;">
-	<nav class="loaded" style="">
-	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="is-inview">At a Glance</a>
-	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
-	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
-	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
-	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most recent quarter</a>
-	<a href="https://measuringaccionintheus.github.io#about-the-data" class="">About the Data</a>
-	</nav>	
+
+<div class="header" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
+  <h2>Scroll Down</h2>
+  <p>Scroll down to see the sticky effect.</p>
+</div>
+
+<div id="navbar">
+  <a class="active" href="javascript:void(0)">Home</a>
+  <a href="javascript:void(0)">News</a>
+  <a href="javascript:void(0)">Contact</a>
+	<a href="javascript:void(0)">At a Glance</a>
+	<a href="javascript:void(0)">Who we serve</a>
+	<a href="javascript:void(0)">Our members</a>
+	<a href="javascript:void(0)">Portfolio Risk</a>
+	<a href="javascript:void(0)">Most recent quarter</a>
+	<a href="javascript:void(0)">About the Data</a>	
+</div>	
 
 	<section class="success" id="at-a-glance">
 		<div class="contain">
