--- a/index.html
+++ b/index.html
@@ -64,15 +64,12 @@ body {
 </div>
 
 <div id="navbar">
-  <a class="active" href="javascript:void(0)">Home</a>
-  <a href="javascript:void(0)">News</a>
-  <a href="javascript:void(0)">Contact</a>
-	<a href="javascript:void(0)">At a Glance</a>
-	<a href="javascript:void(0)">Who we serve</a>
-	<a href="javascript:void(0)">Our members</a>
-	<a href="javascript:void(0)">Portfolio Risk</a>
-	<a href="javascript:void(0)">Most recent quarter</a>
-	<a href="javascript:void(0)">About the Data</a>	
+	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="is-inview">At a Glance</a>
+	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
+	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
+	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
+	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most recent quarter</a>
+	<a href="https://measuringaccionintheus.github.io#about-the-data" class="">About the Data</a>
 </div>	
 
 	<section class="success" id="at-a-glance">
