--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most recent quarter</a>
 	<a href="https://measuringaccionintheus.github.io#about-the-data" class="">About the Data</a>
 </div>	
-
+	<div class="content">
 	<section class="success" id="at-a-glance">
 		<div class="contain">
 		<div class='tableauPlaceholder' id='viz1550587221753' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Ataglance&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LARQ12019&#47;Ataglance' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Ataglance&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587221753');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
@@ -118,6 +118,7 @@ body {
 		<div class="content text">
 		<p>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details.
 </p>  
+</div>			
 </body>
 <script>
 window.onscroll = function() {myFunction()};
