--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+	z-index: -1;
 }
 #navbar a:hover {
   background-color: #ddd;
