--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
 #navbar {
   overflow: hidden;
   background-color: #333;
+	z-index:9999999;
 }
 
 #navbar a {
@@ -28,6 +29,7 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+	z-index:9999999;
 }
 
 #navbar a:hover {
