--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@ body {
   margin: 0;
   font-size: 28px;
   font-family: Arial, Helvetica, sans-serif;
+	z-index:991;
 }
 
 .header {
   background-color: #f1f1f1;
   padding: 30px;
   text-align: center;
+	z-index:999;	
 }
 
 #navbar {
   overflow: hidden;
   background-color: #333;
-	z-index:9999999;
+	z-index:999;
 }
 
 #navbar a {
@@ -29,31 +31,36 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-	z-index:9999999;
+	z-index:999;
 }
 
 #navbar a:hover {
   background-color: #ddd;
   color: black;
+	z-index:999;
 }
 
 #navbar a.active {
   background-color: #4CAF50;
   color: white;
+	z-index:999;
 }
 
 .content {
   padding: 16px;
+	z-index:991;
 }
 
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
+	z-index:999;
 }
 
 .sticky + .content {
   padding-top: 60px;
+	z-index:999;
 }
 </style>
 </head>
