--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -9,20 +10,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 	z-index:991;
 }
-
 .header {
   background-color: #f1f1f1;
   padding: 30px;
   text-align: center;
 	z-index:999;	
 }
-
 #navbar {
   overflow: hidden;
   background-color: #333;
 	z-index:999;
 }
-
 #navbar a {
   float: left;
   display: block;
@@ -33,63 +31,91 @@ body {
   font-size: 17px;
 	z-index:999;
 }
-
 #navbar a:hover {
   background-color: #ddd;
   color: black;
 	z-index:999;
 }
-
 #navbar a.active {
   background-color: #4CAF50;
   color: white;
 	z-index:999;
 }
-
 .content {
   padding: 16px;
 	z-index:991;
 }
-
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
 	z-index:999;
 }
-
 .sticky + .content {
   padding-top: 60px;
 	z-index:999;
 }
 </style>
-</head>
+</head>	
 <body>
 
-<div class="header">
+<div class="header" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
   <h2>Scroll Down</h2>
   <p>Scroll down to see the sticky effect.</p>
-</div>
+
 
 <div id="navbar">
-  <a class="active" href="javascript:void(0)">Home</a>
-  <a href="javascript:void(0)">News</a>
-  <a href="javascript:void(0)">Contact</a>
-</div>
-
-<div class="content">
-  <h3>Sticky Navigation Example</h3>
-  <p>The navbar will stick to the top when you reach its scroll position.</p>
-  <div class='tableauPlaceholder' id='viz1550612921045' style='position: relative'><noscript><a href='https:&#47;&#47;us.accion.org&#47;'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;TJP892YQ5' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550612921045');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='823px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='823px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>	
+	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="is-inview">At a Glance</a>
+	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
+	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
+	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
+	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most recent quarter</a>
+	<a href="https://measuringaccionintheus.github.io#about-the-data" class="">About the Data</a>
+</div>	
+</div>	
+	<div class="content">
+	<section class="success" id="at-a-glance">
+		<div class='tableauPlaceholder' id='viz1550587221753' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Ataglance&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LARQ12019&#47;Ataglance' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Ataglance&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587221753');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		</div>
+		<div class="row clearfix">
+	</section>
+	<section class="successs" id="who-we-serve">
+		<div class='tableauPlaceholder' id='viz1550587317304' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Whoweserve&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LARQ12019&#47;Whoweserve' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Whoweserve&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587317304');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+		<div class="row clearfix">
+	</section>
+	<section class="success" id="our-members">
+		<div class='tableauPlaceholder' id='viz1550587393999' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PF&#47;PF767W8M7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;PF767W8M7' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PF&#47;PF767W8M7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587393999');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1100px';vizElement.style.height='827px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+		<div class="row clearfix">
+	</section>
+	<section class="success" id="portfolio-risk">
+		<div class='tableauPlaceholder' id='viz1550587438519' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;R2&#47;R25YRRW96&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;R25YRRW96' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;R2&#47;R25YRRW96&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587438519');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+		<div class="row clearfix">
+	</section>
+	<section class="success" id="most-recent-quarter">
+		<div class='tableauPlaceholder' id='viz1550612921045' style='position: relative'><noscript><a href='https:&#47;&#47;us.accion.org&#47;'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;TJP892YQ5' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550612921045');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='823px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='823px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>	
+		</div>
+		<div class="row clearfix">
+	</section>
+	<section class="content" id="about-the-data">
+		<div class="blue-bg">
+		<header>
+		<h2>About the Loan Activity Report</h2>
+		</h2>
+		</header>
+		</div>
+		<div class="contain">
+		<div class="content text">
+		<p>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details.
+</p>  
+</div>			
 </div>
-
 <script>
 window.onscroll = function() {myFunction()};
-
 var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
-
 function myFunction() {
   if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
@@ -97,7 +123,8 @@ function myFunction() {
     navbar.classList.remove("sticky");
   }
 }
+	
 </script>
-
-</body>
-</html>
+</body>	
+		
+</html>  
