--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 
 
 <div id="navbar">
-	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="is-inview">At a Glance</a>
+	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="active">At a Glance</a>
 	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
 	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
 	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
