--- a/index.html
+++ b/index.html
@@ -139,10 +139,17 @@ resource-template-default.post-content a {color:#ffffff}
 	font-weight: normal;
 }	
 </style>
+<header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
+<div class="contain _very-narrow">
+<h1>Measuring Accion</h1>
+<h2><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
+</h2>
+</div>
+</header>
+	
 </head>	
 <body>
 
-<div class="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
   <h2>Scroll Down</h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
