--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ resource-template-default.post-content a {color:#ffffff}
 </style>
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
 <div class="contain _very-narrow">
-<h1>Measuring Accion</h1>
-<h2><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
+<h1 style="font-size:26px">Measuring Accion</h1>
+<h2 style="font-size:18px"><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
 </h2>
 </div>
 </header>
