--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ resource-template-default.post-content a {color:#ffffff}
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
 <div class="contain _very-narrow">
 <h1 style="font-size:34px;font-family: Arial;">Measuring Accion</h1>
-<h2 style="font-size:26px;font-family: Arial;"><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
+<h2 style="font-size:26px;font-family: Arial;color:#ffffff;"><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
 </h2>
 </div>
 </header>
