--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 	z-index:991;
 }
+h1 {
+    font-size:34px; 
+	font-family: Arial;
+	color: #ffffff;
+}
+
+h2{
+font-size:26px; 
+font-family: Arial;
+color: #ffffff;	
+
+	}	
 .header {
   background-color: #f1f1f1;
   padding: 30px;
@@ -141,8 +153,8 @@ resource-template-default.post-content a {color:#ffffff}
 </style>
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
 <div class="contain _very-narrow">
-<h1 style="font-size:34px;font-family: Arial;">Measuring Accion</h1>
-<h2 style="font-size:26px;font-family: Arial;color:#ffffff;"><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
+<h1 style="font-size:34px; font-family: Arial;">Measuring Accion</h1>
+<h2 style="font-size:26px; font-family: Arial;color: #ffffff;"><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
 </h2>
 </div>
 </header>
@@ -181,8 +193,8 @@ resource-template-default.post-content a {color:#ffffff}
 	<section class="content" id="about-the-data">
 		<div class="blue-bg">
 		<header>
-		<h1 style="font-size:18px;font-family: Arial;">About the Loan Activity Report</h1>
-		<h2 style="font-size:26px;font-family: Arial;"><p>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details.</p>
+		<h1>About the Loan Activity Report</h1>
+		<h2><p>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details.</p>
 		</header>
 		</div>
 <script>
