--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-size: 28px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, Arial, Helvetica, sans-serif;
 	z-index:991;
 }
 h1 {
