--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@ h1 {
 	color: #ffffff;
 }
 
-h2{
+h2 {
 font-size:26px; 
 font-family: Arial;
 color: #ffffff;	
-
 	}	
 .header {
   background-color: #f1f1f1;
@@ -154,8 +153,7 @@ resource-template-default.post-content a {color:#ffffff}
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
 <div class="contain _very-narrow">
 <h1>Measuring Accion</h1>
-<h2><p>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</p>
-</h2>
+<h2>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</h2>
 </div>
 </header>
 	
