--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ color: #ffffff;
 #navbar {
   overflow: hidden;
   background-color: #333;
+	font-family: Arial;	
 	z-index:999;
 }
 #navbar a {
@@ -40,6 +41,7 @@ color: #ffffff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: Arial;	
   font-size: 17px;
 	z-index:999;
 }
