--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ color: #ffffff;
 	z-index:999;
 }
 #navbar a.active {
-  background-color: #4CAF50;
+  background-color: #6bbbae;
   color: white;
 	z-index:999;
 }
