--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ color: #ffffff;
 	z-index:999;
 }
 #navbar a:hover {
-  background-color: #ddd;
+  background-color: #6bbbae;
   color: black;
 	z-index:999;
 }
@@ -161,7 +161,7 @@ resource-template-default.post-content a {color:#ffffff}
 	
 </div>
 <div id="navbar">
-	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="active">At a Glance</a>
+	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="">At a Glance</a>
 	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
 	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
 	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
