--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ resource-template-default.post-content a {color:#ffffff}
 </div>
 <div id="navbar">
 	<a href="https://measuringaccionintheus.github.io#at-a-glance" class="">At a Glance</a>
-	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who we serve</a>
-	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our members</a>
+	<a href="https://measuringaccionintheus.github.io#who-we-serve" class="">Who We Serve</a>
+	<a href="https://measuringaccionintheus.github.io#our-members" class="">Our Members</a>
 	<a href="https://measuringaccionintheus.github.io#portfolio-risk" class="">Portfolio Risk</a>
-	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most recent quarter</a>
+	<a href="https://measuringaccionintheus.github.io#most-recent-quarter" class="">Most Recent Quarter</a>
 	<a href="https://measuringaccionintheus.github.io#about-the-data" class="">About the Data</a>
 </div>	
 </head>	
@@ -194,7 +194,8 @@ resource-template-default.post-content a {color:#ffffff}
 		<div class="blue-bg">
 		<header>
 		<h1>About the Loan Activity Report</h1>
-		<h2><p>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details.</p>
+		<p> </p>	
+		<h2>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details. </h2>
 		</header>
 		</div>
 <script>
