--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ font-size:26px;
 font-family: Arial;
 color: #ffffff;	
 	}	
-    #AtD{
+	AtD{
       background-color: blue;
       height: 100%;
       position: absolute;
@@ -199,13 +199,11 @@ resource-template-default.post-content a {color:#ffffff}
 		</div>
 	</section>
 	<section class="AtD" id="about-the-data">
-		<div class="blue-bg">
 		<header>
 		<h1>About the Loan Activity Report</h1>
 		<p> </p>	
 		<h2>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details. </h2>
 		</header>
-		</div>
 <script>
 window.onscroll = function() {myFunction()};
 var navbar = document.getElementById("navbar");
