--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@ body {
   font-family: Georgia, Arial, Helvetica, sans-serif;
 	z-index:991;
 }
+	
+hr {
+width: 80%;
+height: 8px;
+margin-left: auto;
+margin-right: auto;
+background-color:#666;
+border: 0 none;
+margin-top: 100px;
+margin-bottom:100px;
+}
+	
 h1 {
     font-size:34px; 
 	font-family: Arial;
