--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ height: 8px;
 margin-left: auto;
 margin-right: auto;
 background-color:#666;
-border: 0 none;
+border: 1px dashed;
 margin-top: 100px;
 margin-bottom:100px;
 }
