--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@ body {
 	z-index:991;
 }
 	
-hr {
-width: 80%;
-height: 8px;
-margin-left: auto;
-margin-right: auto;
-background-color:#666;
-border: 1px dashed;
-margin-top: 100px;
-margin-bottom:100px;
-}
+<hr width="400" style="border: 2px dashed #C0C0C0" color="#FFFFFF" size="6">
+
+
+Read more: https://www.webdesign.org/html-and-css/tutorials/horizontal-lines.1337.html#ixzz5gYraTzHv
 	
 h1 {
     font-size:34px; 
