--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@ body {
 	z-index:991;
 }
 	
-<hr width="400" style="border: 2px dashed #C0C0C0" color="#FFFFFF" size="6">
+hr {width="400";style="border: 2px dashed #C0C0C0"; color="#FFFFFF"; size="6";}
 
-
-Read more: https://www.webdesign.org/html-and-css/tutorials/horizontal-lines.1337.html#ixzz5gYraTzHv
-	
 h1 {
     font-size:34px; 
 	font-family: Arial;
