--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ body {
 	z-index:991;
 }
 	
-hr {width="400";style="border: 2px dashed #C0C0C0"; color="#FFFFFF"; size="6";}
+hr {
+	border: 2px dashed #C0C0C0"; 
+		color="#FFFFFF"; size="6";}
 
 h1 {
     font-size:34px; 
