--- a/SMB-Finhealth.html
+++ b/SMB-Finhealth.html
@@ -180,8 +180,8 @@ resource-template-default.post-content a {color:#ffffff}
 </style>
 <header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
 <div class="contain _very-narrow">
-<h1>Measuring Accion</h1>
-<h2>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</h2>
+<h1>Small Business Financial Health @ Accion</h1>
+<h2>Measuring the Financial Health of borrowers and leads in 2018</h2>
 </div>
 </header>
 	
