--- a/SMB-Finhealth.html
+++ b/SMB-Finhealth.html
@@ -178,7 +178,7 @@ resource-template-default.post-content a {color:#ffffff}
 	font-weight: normal;
 }	
 </style>
-<header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
+<header id="hero" style="background-image:url(&#39;https://MeasuringAccionInTheUS.github.io/freddie-marriage-40251-unsplash.jpg&#39;)">
 <div class="contain _very-narrow">
 <h1>Small Business Financial Health @ Accion</h1>
 <h2>Measuring the Financial Health of borrowers and leads in 2018</h2>
