--- a/SMB-Finhealth.html
+++ b/SMB-Finhealth.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" id="main_css-css" href="https://jschintz.github.io/AccionMeasures/main.min.css" type="text/css" media="all">
 <style>
 body {
-  margin: 0;
+  margin: auto;
   font-size: 28px;
   font-family: Georgia, Arial, Helvetica, sans-serif;
 	z-index:991;
